some minor tweaks for Cloud Base

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -14,7 +14,7 @@
   <header id="head">
     <div class="col-xs-12 text-center widewrapper cloudbox">
       <h1>${_('Fedora Cloud')}</h1>
-      <p>${_('Cloud Base images')}</p>
+      <p>${_('Cloud Base Images')}</p>
     </div>
   </header>
 
@@ -22,7 +22,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-lg-12 top-margin">
-        <h2>${Markup(_('Fedora %(rel)s Cloud Base images')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
@@ -147,7 +147,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-lg-12 top-margin">
-        <h2>${Markup(_('Fedora %(rel)s Base Cloud Images for Vagrant')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Vagrant')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
@@ -193,7 +193,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${Markup(_('Fedora %(rel)s Base Cloud Images for Vagrant')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Vagrant')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
@@ -229,7 +229,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-sm-12">
-        <h2>${Markup(_('Fedora %(rel)s Base Cloud Images for Vagrant')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Vagrant')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
@@ -273,7 +273,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-lg-12 top-margin">
-        <h2>${Markup(_('Fedora %(rel)s Base Cloud Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
@@ -292,7 +292,7 @@
             <h3>${_('GP2 HVM AMIs')}</h3>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click to launch')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -303,7 +303,7 @@
             <h3>${_('Standard HVM AMIs')}</h3>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click to launch')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -314,7 +314,7 @@
             <h3>${_('GP2 Paravirtual AMIs')}</h3>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click to launch')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -325,7 +325,7 @@
             <h3>${_('Standard Paravirtual AMIs')}</h3>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click to launch')}</a></p>
             </div>
           </div>
       </div>
@@ -337,7 +337,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${Markup(_('Fedora %(rel)s Base Cloud Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
@@ -393,7 +393,7 @@
     <div class="container using">
       <div class="row">
         <div class="col-sm-12">
-        <h2>${Markup(_('Fedora %(rel)s Base Cloud Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
+        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
