fix download links for CLoud Base images

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -39,10 +39,10 @@
             <h3>${_('Cloud Base compressed raw image')}</h3>
             </div>
             <div class="col-lg-2">
-            <p>${Markup(_('%sMB raw.xz image')) % global_variables.iso_size['aarch64_Server_DVD']}</p>
+            <p>${Markup(_('%sMB raw.xz image')) % global_variables.iso_size['raw_x86_64_cloud']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -53,10 +53,10 @@
             <h3>${_('Cloud Base image for Openstack')}</h3>
             </div>
             <div class="col-lg-2">
-            <p>${Markup(_('%sMB qcow2 image')) % global_variables.iso_size['aarch64_Server_DVD']}</p>
+            <p>${Markup(_('%sMB qcow2 image')) % global_variables.iso_size['qcow2_x86_64_cloud']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
       </div>
@@ -83,7 +83,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Cloud Base raw')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -92,7 +92,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Cloud Base qcow2')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
           <h3>${_('Cloud Base raw image')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -132,7 +132,7 @@
           <h3>${_('Cloud Base qcow2 image')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -164,10 +164,10 @@
             <h3>${_('VirtualBox image')}</h3>
             </div>
             <div class="col-lg-2">
-            <p>${Markup(_('%sMB vbox image')) % global_variables.iso_size['aarch64_Server_DVD']}</p>
+            <p>${Markup(_('%sMB vbox image')) % global_variables.iso_size['VBvag_cloud']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -178,10 +178,10 @@
             <h3>${_('libvirt/KVM image')}</h3>
             </div>
             <div class="col-lg-2">
-            <p>${Markup(_('%sMB libvirt image')) % global_variables.iso_size['aarch64_Server_DVD']}</p>
+            <p>${Markup(_('%sMB libvirt image')) % global_variables.iso_size['libvag_cloud']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
       </div>
@@ -208,7 +208,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('VirtualBox image')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -217,7 +217,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('libvirt/KVM image')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@
           <h3>${_('VirtualBox image')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -257,7 +257,7 @@
           <h3>${_('libvirt/KVM image')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
