fix link font color

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -292,7 +292,7 @@
             <h3>${_('GP2 HVM AMIs')}</h3>
             </div>
             <div class="col-lg-4">
-            <p class="download" data-toggle="modal" data-target=".GP2-base-EC2-mobile">${_('Click to launch')}</p>
+            <p class="download ec2" data-toggle="modal" data-target=".GP2-base-EC2-mobile">${_('Click to launch')}</p>
             <div class="modal fade GP2-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
