--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -269,15 +269,15 @@
 
   <!-- EC2 AMI IDs -->
     <!-- Desktop -->
-  <div class="jumbotron main-head hidden-xs hidden-sm hidden-md">
+  <div class="jumbotron main-head hidden-xs">
     <div class="container using">
       <div class="row">
-        <div class="col-lg-12 top-margin">
+        <div class="col-sm-12 top-margin">
         <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-12 product-feature">
+        <div class="col-sm-12 product-feature">
         <p>${_('The links below will provide you listings of available AMIs by region with buttons to launch them in your Amazon Web Services account. AMI IDs for usage with the AWS Console or command-line tools are also provided.')}</p>
         <p>${_('All images are available in two formats: a GP2 format which uses faster SSD storage, and a standard format which is more suitable if you have infrequently accessed data and you want to keep storage cost low.')}</p>
         <p>${_('If you know you need a paravirtual format image for EC2, use the Paravirtual (PV) format. If you\'re unsure which image to choose, use the Hardware Virtual Machine (HVM) format. It can provide the same or better performance than PV images.')}</p>
@@ -285,15 +285,15 @@
       </div>
       <div class="row">
           <div class="white">
-            <div class="col-lg-1">
+            <div class="col-sm-1">
             <img src="/static/images/cloud.png" />
             </div>
-            <div class="col-lg-7">
+            <div class="col-sm-7">
             <h3>${_('GP2 HVM AMIs')}</h3>
             </div>
-            <div class="col-lg-4">
-            <p class="download ec2" data-toggle="modal" data-target=".GP2-base-EC2-mobile">${_('Click to launch')}</p>
-            <div class="modal fade GP2-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="col-sm-4">
+            <p class="download ec2" data-toggle="modal" data-target=".GP2-base-EC2-desktop">${_('Click to launch')}</p>
+            <div class="modal fade GP2-base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
               <div class="modal-dialog modal-cloud">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -375,14 +375,41 @@
       </div>
       <div class="row">
         <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('GP2 HVM AMIs')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
-          </div>
+            <div class="col-xs-3">
+            <img src="/static/images/cloud.png" />
+            </div>
+            <div class="col-xs-9">
+            <h3>${_('GP2 HVM AMIs')}</h3>
+            <p class="download ec2" data-toggle="modal" data-target=".GP2-base-EC2-mobile">${_('Click to launch')}</p>
+            <div class="modal fade GP2-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog modal-cloud">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s GP2 Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
+                  </div>
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>${_('Region')}</th>
+                        <th class="hidden-xs">${_('AMI ID')}</th>
+                        <th class="text-center">${_('Launch')}</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr py:for="r in global_variables.EC2_regions">
+                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="hidden-xs">${global_variables.GP2_HVM_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            </div>
         </div>
+
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/cloud.png" />
@@ -407,70 +434,6 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Standard PV AMIs')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Tablets-->
-  <div class="jumbotron main-head hidden-xs hidden-lg">
-    <div class="container using">
-      <div class="row">
-        <div class="col-sm-12">
-        <h2>${Markup(_('Fedora %(rel)s Cloud Base Images for Amazon Public Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 product-feature">
-        <p>${_('The links below will provide you listings of available AMIs by region with buttons to launch them in your Amazon Web Services account. AMI IDs for usage with the AWS Console or command-line tools are also provided.')}</p>
-        <p>${_('All images are available in two formats: a GP2 format which uses faster SSD storage, and a standard format which is more suitable if you have infrequently accessed data and you want to keep storage cost low.')}</p>
-        <p>${_('If you know you need a paravirtual format image for EC2, use the Paravirtual (PV) format. If you\'re unsure which image to choose, use the Hardware Virtual Machine (HVM) format. It can provide the same or better performance than PV images.')}</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('GP2 HVM AMIs')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('Standard HVM AMIs')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('GP2 Paravirtual AMIs')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('Standard Paravirtual AMIs')}</h3>
-          </div>
-          <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Click and launch')}</a></p>
           </div>
         </div>
