add Cloud section to the alt.fp.o index page

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -219,6 +219,25 @@
     </div>
   </div>
 
+  <!-- Cloud -->
+  <div class="jumbotron main-head top-space">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-12">
+        <h2>${_('Cloud Base Images')}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 product-feature">
+        <p>${_('These are standard Cloud Base images.')}</p>
+        </div>
+        <div class="col-xs-12 text-center">
+        <p><a class="btn btn-lg btn-primary" href="cloud/" role="button">${_('Download')}</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Testing -->
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
