--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -599,6 +599,19 @@
   <div class="white-hr"></div>
   <!-- end EC2 AMI IDs -->
 
+  <!-- Links to other products -->
+  <xi:include href="../../templates/morecloud.html" />
+  <div class="bottom-products text-center clearfix">
+  <div class="container">
+      <div class="row">
+        <div class="col-xs-12 product-selector bottom-space">
+            <xi:include href="../../templates/productselector-atomic.html" />
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /Links to other products-->
+
   <!-- Resources -->
   <div class="jumbotron main-head">
     <div class="container">
