add fake links to ws download to filter out crawlers

--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -99,6 +99,9 @@
                 </div>
                 <div class="jumbotron download">
                       <a class="btn btn-success" href="https://getfedora.org/fmw/FedoraMediaWriter-osx-4.0.7.dmg" role="button">${_('Download')}</a>
+                     <!-- Fake link to filter out crawlers -->
+                     <a style="display: none" href="https://getfedora.org/fmw/nottherealfmw.dmg"></a>
+                     <!-- End fake link -->
                 </div>
               </div>
               <div class="col-xs-12 col-sm-4 text-center">
@@ -108,6 +111,9 @@
                 </div>
                 <div class="jumbotron download">
                       <a class="btn btn-success" href="https://getfedora.org/fmw/FedoraMediaWriter-win32-4.0.7.exe" role="button">${_('Download')}</a>
+                      <!-- Fake link to filter out crawlers -->
+                     <a style="display: none" href="https://getfedora.org/fmw/nottherealfmw.exe"></a>
+                     <!-- End fake link -->
                 </div>
               </div>
               <div class="col-xs-12 col-sm-4 text-center">
