--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -238,6 +238,91 @@
     </div>
   </div>
 
+    <!-- Everything -->
+  <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-12">
+        <h2>${_('Everything Images')}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 product-feature">
+        <p>${_('Everything.')}</p>
+        </div>
+        <div class="col-lg-9">
+            <div class="white">
+            <div class="col-lg-1">
+            <img src="/static/images/ev.png" />
+            </div>
+            <div class="col-lg-6">
+            <h3>${_('Everything')}</h3>
+            </div>
+            <div class="col-lg-4 col-lg-offset-1">
+            <p class="download"><a href="https://dl.fedoraproject.org/pub/fedora/linux/releases/25/Everything/">${Markup(_('View Images &gt;'))}</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Everything mobile phones-->
+  <div class="jumbotron main-head top-space visible-xs">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-12">
+        <h2>${_('Everything Images')}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 product-feature">
+        <p>${_('Everything.')}</p>
+        </div>
+      </div>
+      <div class="row">
+          <div class="white">
+          <div class="col-xs-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-xs-9">
+          <h3>${_('Everything')}</h3>
+          <p class="download"><a href="https://dl.fedoraproject.org/pub/fedora/linux/releases/25/Everything/">${Markup(_('View Images &gt;'))}</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Everything mobile tablets-->
+  <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-12">
+        <h2>${_('Everything Images')}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 product-feature">
+        <p>${_('Everything.')}</p>
+        </div>
+      </div>
+      <div class="row">
+          <div class="white">
+          <div class="col-sm-3">
+          <img src="/static/images/ev.png" />
+          </div>
+          <div class="col-sm-5">
+          <h3>${_('Everything')}</h3>
+          </div>
+          <div class="col-sm-4">
+          <p class="download"><a href="https://dl.fedoraproject.org/pub/fedora/linux/releases/25/Everything/">${Markup(_('View Images &gt;'))}</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Testing -->
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
@@ -298,7 +383,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Nightly builds')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
+          <p class="download"><a href="https://www.happyassassin.net/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
@@ -307,7 +392,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Other test composes')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
+          <p class="download"><a href="https://dl.fedoraproject.org/pub/alt/stage">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
       </div>
@@ -336,7 +421,7 @@
           <h3>${_('Nightly builds')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
+          <p class="download"><a href="https://www.happyassassin.net/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
@@ -347,7 +432,7 @@
           <h3>${_('Other test composes')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
+          <p class="download"><a href="https://dl.fedoraproject.org/pub/alt/stage">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
       </div>
